--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
+group='com.zhibo8.gamesdk'
 
 android {
     compileSdk 31
@@ -44,4 +46,20 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     api 'com.alipay.sdk:alipaysdk-android:+@aar'
 
+}
+
+task androidSourceJar(type: Jar){
+    classifier 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                artifact androidSourceJar
+            }
+        }
+    }
 }
